name:		project-euler
version:	0.1
synopsis:	Exercises for Project Euler
homepage:	https://github.com/carletes/project-euler
license:	MIT
license-file:	LICENSE
author:		Carlos Valiente
maintainer:	Carlos Valiente <carlos@pepelabs.net>
copyright:	(c) Carlos Valiente 2013
category:	Sample Code
build-type:	Simple
cabal-version:	>=1.10

source-repository head
  type:     git
  location: https://github.com/carletes/project-euler.git

executable problem-001
  main-is:		main.hs
  hs-source-dirs:	001
  build-depends:	base, QuickCheck
  default-language:	Haskell2010