name:		project-euler
version:	0.1
synopsis:	Exercises for Project Euler
homepage:	https://github.com/carletes/project-euler
license:	MIT
license-file:	LICENSE
author:		Carlos Valiente
maintainer:	Carlos Valiente <carlos@pepelabs.net>
copyright:	(c) Carlos Valiente 2013
category:	Sample Code
build-type:	Simple
cabal-version:	>=1.10

source-repository head
  type:     git
  location: https://github.com/carletes/project-euler.git

executable problem-001
  main-is:		main.hs
  hs-source-dirs:	001
  build-depends:	base, QuickCheck
  default-language:	Haskell2010

executable problem-002
  main-is:		main.hs
  hs-source-dirs:	002
  build-depends:	base, QuickCheck
  default-language:	Haskell2010

executable problem-003
  main-is:		main.hs
  hs-source-dirs:	003
  build-depends:	base, QuickCheck
  default-language:	Haskell2010

executable problem-004
  main-is:		main.hs
  hs-source-dirs:	004
  build-depends:	base, QuickCheck
  default-language:	Haskell2010

executable problem-005
  main-is:		main.hs
  hs-source-dirs:	005
  build-depends:	base, QuickCheck
  default-language:	Haskell2010

executable problem-006
  main-is:		main.hs
  hs-source-dirs:	006
  build-depends:	base, QuickCheck
  default-language:	Haskell2010

executable problem-007
  main-is:		main.hs
  hs-source-dirs:	007
  build-depends:	base, QuickCheck
  default-language:	Haskell2010

executable problem-008
  main-is:		main.hs
  hs-source-dirs:	008
  build-depends:	base, QuickCheck
  default-language:	Haskell2010

executable problem-009
  main-is:		main.hs
  hs-source-dirs:	009
  build-depends:	base, QuickCheck
  default-language:	Haskell2010