name:		project-euler
version:	0.1
synopsis:	Exercises for Project Euler
homepage:	https://github.com/carletes/project-euler
license:	MIT
license-file:	LICENSE
author:		Carlos Valiente
maintainer:	Carlos Valiente <carlos@pepelabs.net>
copyright:	(c) Carlos Valiente 2013
category:	Sample Code
build-type:	Simple
cabal-version:	>=1.10

source-repository head
  type:     git
  location: https://github.com/carletes/project-euler.git

executable problem-2
  main-is:		problem-2.hs
  build-depends:	base
  default-language:	Haskell2010

executable problem-3
  main-is:		problem-3.hs
  build-depends:	base
  default-language:	Haskell2010

executable problem-4
  main-is:		problem-4.hs
  build-depends:	base
  default-language:	Haskell2010

executable problem-5
  main-is:		problem-5.hs
  build-depends:	base
  default-language:	Haskell2010

executable problem-6
  main-is:		problem-6.hs
  build-depends:	base
  default-language:	Haskell2010

executable problem-7
  main-is:		problem-7.hs
  build-depends:	base
  default-language:	Haskell2010

executable problem-8
  main-is:		problem-8.hs
  build-depends:	base
  default-language:	Haskell2010

executable problem-9
  main-is:		problem-9.hs
  build-depends:	base
  default-language:	Haskell2010